k8s/prod/config/aluraflix.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aluraflix
  labels:
    app: aluraflix
spec:
  replicas: 3
  selector:
    matchLabels:
      app: aluraflix
  template:
    metadata:
      labels:
        app: aluraflix
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: aluraflix
          image: wesleymime/aluraflix_api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: aluraflix-service
spec:
  selector:
    app: aluraflix
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
