k8s/prod/config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: aluraflix
spec:
  rules:
    - host: aluraflix-wmime.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aluraflix-service
                port:
                  number: 8080
